# Ferrum-Launcher

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  launcher.env
assets/: main.css
src/: launcher.rs  main.rs
src/view/: home.rs  login.rs  mod.rs  view.rs
src/view/css/: login.css
