[package]
name = "ferrum_launcher"
version = "0.1.0"
authors = ["Enzo Queiroz Costa <enzo415611@gmail.com>"]
edition = "2021"


[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-icons = { version = "0.1.0", default-features = false }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }


[build-dependencies]
dotenvy = "0.15.7"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
